starbucks/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: starbucks
  namespace: default
  labels:
    name: starbucks
spec:
  containers:
    - image: guillerd/starbucks:v2
      name: starbucks
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
