starbucks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starbucks-service 
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080 
  selector:
    name: starbucks
